<resources>
    <string name="app_name" topic="app_name">Homework Helper</string>
    <string name="topic" topic="topic">What is the topic?</string>
    <string name="assignment" topic="assignment">What is the assignment?</string>
    <string name="due" topic="due">When is it due?</string>
    <string name="done" topic="done">Is it done yet?</string>
    <string name="submit" topic="submit">Add Assignment</string>
    <string name="welcome" topic="welcome">Welcome to Homework Helper!</string>
    <string name="unprompt" topic="unpromt">Email</string>
    <string name="pwpromt" topic="pwpromt">Password</string>
    <string name="enter" topic="enter">Log In</string>
    <string name="makeNew" topic="makeNew">New Student</string>
    <string name="addAssignmentToData">Save</string>
    <string name="addAssignmentToCal">Add to Calendar</string>
    <string name="removeAssignment">Remove</string>
    <string name="signOut">Sign Out</string>
    <string name="isDone">Done!</string>
    <string name="isNotDone">NOT DONE YET!</string>
    <string name="dueText">Due</string>
    <string name="enterSubject">Enter Subject (ex. Science)</string>
    <string name="enterAssign">Enter Assignment</string>
    <string name="reminder">Password must be 6 characters or more</string>
    <string name="success">Sign-up successful</string>
    <string name="login">Log-in successful</string>
</resources>