<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ba2364.finalproject_benjaminarachelm.LogInScreen">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"/>

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/welcome" />

    <EditText
        android:id="@+id/usernameEnter"
        style="@style/EditWelcomeStyle"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/unprompt"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/pwordEnter"
        style="@style/EditWelcomeStyle"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:fontFamily="@string/app_name"
        android:gravity="center"
        android:hint="@string/pwpromt"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/enterButton"
        style="@style/ButtonStyle"
        android:layout_marginBottom="5dp"
        android:onClick="logIn"
        android:text="@string/enter"/>

    <Button
        android:id="@+id/newUserButton"
        style="@style/ButtonStyle"
        android:onClick="signUp"
        android:text="@string/makeNew" />
</LinearLayout>